# search-stability-lab

./: .env.example  .gitignore  CITATION.cff  EXPERIMENT_SPEC.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  result_summary.md
analysis/: __init__.py  aggregate.py  conservative_summary.py  figures.py  layer_b_probes.py  stats.py
controllers/: __init__.py  base.py  factory.py  policies.py
core/: __init__.py  config.py  env.py  event_logger.py  exceptions.py  guardrails.py  prompts.py  run_metadata.py  schema_utils.py  seeding.py  structured_models.py
docs/: AUDIT_RESPONSE_PLAN.md  BUILD_PLAN.md  CURRENT_STATUS.md  EXPERIMENT_REDESIGN.md  FINAL_AUDIT.md  FINAL_AUDIT_RESPONSE_PLAN.md  FINAL_RELEASE_REPORT_2026-03-09.md  LAYER_A_SUITE_REPORT_2026-03-09.md  LAYER_B_NONMOCK_REPORT_2026-03-09.md  LAYER_B_PROBE_MATRIX.md  LAYER_B_PROBE_REPORT_2026-03-09.md  LAYER_B_PROXY_MODEL.md  LAYER_B_STATUS.md  LAYER_B_TASK_DESIGN.md  LAYER_B_UPGRADE_PLAN.md  RELEASE_CHECKLIST.md  REPO_MAP.md  REPRODUCIBILITY_CHECKLIST.md  RESULTS_INTERPRETATION.md  RUN_REPORT_2026-03-09.md  SCIENTIFIC_CHECKLIST.md  SCIENTIFIC_SCOPE.md  SECURITY_RESPONSE.md  THEORY_VALIDATION_GUIDE.md  artifact_manifest.json  implementation_notes.md  metric_registry.csv
logging/: README.md
models/: __init__.py  base.py  factory.py  gemini_adapter.py  local_endpoint_adapter.py  mock_adapter.py
schemas/: compression_result.json  continue_branch_reset.json  failure_attribution.json  step_decision.json
scripts/: analyze_results.py  build_layer_b_probe_suite.py  check_experiment_design.py  (+10 more)
(+108 files in other folders)
